frb_example/pure_dart_multi/rust/extra_c_output_path_2/c_output_3.h

typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_SharedComplexEnumInAllBlocks_Optional {
  int32_t *field0;
  struct wire_uint_8_list *field1;
} wire_SharedComplexEnumInAllBlocks_Optional;
typedef struct wire_float_32_list {
  float *ptr;
  int32_t len;
} wire_float_32_list;
typedef struct wire_SharedComplexEnumInAllBlocks_Buffer {
  struct wire_float_32_list *field0;
} wire_SharedComplexEnumInAllBlocks_Buffer;
typedef struct wire_SharedComplexEnumInAllBlocks_Enums {
  int32_t field0;
} wire_SharedComplexEnumInAllBlocks_Enums;
typedef struct wire_SharedComplexEnumInAllBlocks_BytesArray {
  struct wire_uint_8_list *field0;
} wire_SharedComplexEnumInAllBlocks_BytesArray;
typedef struct wire_SharedStructInBlock1And2 {
  int32_t id;
  double num;
  struct wire_uint_8_list *name;
} wire_SharedStructInBlock1And2;
typedef struct wire_StructOnlyForBlock1 {
  int8_t *id;
  double *num;
  struct wire_uint_8_list *name;
} wire_StructOnlyForBlock1;
typedef struct wire_StructOnlyForBlock2 {
  int16_t id;
  double num;
  struct wire_uint_8_list *name;
} wire_StructOnlyForBlock2;
typedef int64_t DartPort;
typedef bool (*DartPostCObjectFnType)(DartPort port_id, void *message);
typedef struct wire_StructOnlyForBlock3 {
  int64_t id;
  double num;
  struct wire_uint_8_list *name;
} wire_StructOnlyForBlock3;
typedef struct wire_StructDefinedInBlock3 {
  struct wire_uint_8_list *name;
} wire_StructDefinedInBlock3;
typedef struct wire_EnumDefinedInBlock3_Quit {

} wire_EnumDefinedInBlock3_Quit;
typedef struct wire_EnumDefinedInBlock3_Move {
  int32_t x;
  int32_t y;
} wire_EnumDefinedInBlock3_Move;
typedef struct wire_EnumDefinedInBlock3_Write {
  struct wire_uint_8_list *field0;
} wire_EnumDefinedInBlock3_Write;
typedef struct wire_EnumDefinedInBlock3_ChangeColor {
  int32_t field0;
  int32_t field1;
  int32_t field2;
} wire_EnumDefinedInBlock3_ChangeColor;
typedef union EnumDefinedInBlock3Kind {
  struct wire_EnumDefinedInBlock3_Quit *Quit;
  struct wire_EnumDefinedInBlock3_Move *Move;
  struct wire_EnumDefinedInBlock3_Write *Write;
  struct wire_EnumDefinedInBlock3_ChangeColor *ChangeColor;
} EnumDefinedInBlock3Kind;
typedef struct wire_EnumDefinedInBlock3 {
  int32_t tag;
  union EnumDefinedInBlock3Kind *kind;
} wire_EnumDefinedInBlock3;