frb_example/pure_dart_multi/dart/lib/bridge_generated_api_block_3.io.dart


  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks_Buffer> Buffer;

  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks_Enums> Enums;

  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks_BytesArray> BytesArray;
}

final class wire_SharedComplexEnumInAllBlocks_Optional extends ffi.Struct {
  external ffi.Pointer<ffi.Int32> field0;

  external ffi.Pointer<wire_uint_8_list> field1;
}

final class wire_SharedComplexEnumInAllBlocks_Buffer extends ffi.Struct {
  external ffi.Pointer<wire_float_32_list> field0;
}

final class wire_SharedComplexEnumInAllBlocks_Enums extends ffi.Struct {
  @ffi.Int32()
  external int field0;
}

final class wire_SharedComplexEnumInAllBlocks_BytesArray extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> field0;
}

final class wire_SharedStructInBlock1And2 extends ffi.Struct {
  @ffi.Int32()
  external int id;

  @ffi.Double()
  external double num;

  external ffi.Pointer<wire_uint_8_list> name;
}

final class wire_StructOnlyForBlock1 extends ffi.Struct {
  external ffi.Pointer<ffi.Int8> id;

  external ffi.Pointer<ffi.Double> num;

  external ffi.Pointer<wire_uint_8_list> name;
}

final class wire_StructOnlyForBlock2 extends ffi.Struct {
  @ffi.Int16()
  external int id;

  @ffi.Double()
  external double num;

  external ffi.Pointer<wire_uint_8_list> name;
}

final class wire_StructOnlyForBlock3 extends ffi.Struct {
  @ffi.Int64()
  external int id;

  @ffi.Double()
  external double num;

  external ffi.Pointer<wire_uint_8_list> name;
}

final class wire_StructDefinedInBlock3 extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> name;
}

final class wire_EnumDefinedInBlock3_Quit extends ffi.Opaque {}

final class wire_EnumDefinedInBlock3_Move extends ffi.Struct {
  @ffi.Int32()
  external int x;

  @ffi.Int32()
  external int y;
}

final class wire_EnumDefinedInBlock3_Write extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> field0;
}

final class wire_EnumDefinedInBlock3_ChangeColor extends ffi.Struct {
  @ffi.Int32()
  external int field0;

  @ffi.Int32()
  external int field1;

  @ffi.Int32()
  external int field2;
}

final class EnumDefinedInBlock3Kind extends ffi.Union {
  external ffi.Pointer<wire_EnumDefinedInBlock3_Quit> Quit;

  external ffi.Pointer<wire_EnumDefinedInBlock3_Move> Move;

  external ffi.Pointer<wire_EnumDefinedInBlock3_Write> Write;

  external ffi.Pointer<wire_EnumDefinedInBlock3_ChangeColor> ChangeColor;
}

final class wire_EnumDefinedInBlock3 extends ffi.Struct {
  @ffi.Int32()
  external int tag;

  external ffi.Pointer<EnumDefinedInBlock3Kind> kind;
}

typedef DartPostCObjectFnType
    = ffi.Pointer<ffi.NativeFunction<ffi.Bool Function(DartPort port_id, ffi.Pointer<ffi.Void> message)>>;
typedef DartPort = ffi.Int64;
